# cap/Makefile.am

include $(top_srcdir)/cppconact_common.am

ACLOCAL_AMFLAGS = -I m4

# SUBDIRS = . cutil orbtest cereal bobtalk fcdig # hall
# SUBDIRS = . cutil cereal bobtalk fcdig # hall
# SUBDIRS = . cutil cereal bobtalk #fcdig #newport #example1 example5

bin_PROGRAMS = hello_concurrent_world background_task tree

hello_concurrent_world_SOURCES = hello_concurrent_world.cpp

background_task_SOURCES = background_task.cpp background_task.hpp

tree_SOURCES = tree.cpp
